[package]
name = "raydium-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raydium"
path = "src/main.rs"

[features]
# default is mainnet
devnet = [
    "amm-cli/devnet",
    "clmm-cli/devnet",
    "cpswap-cli/devnet",
    "common/devnet",
]

[dependencies]
amm-cli = { path = "../libraries/amm_cli" }
clmm-cli = { path = "../libraries/clmm_cli" }
cpswap-cli = { path = "../libraries/cpswap_cli" }
common = { path = "../libraries/common" }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint" ], default-features = false }
solana-zk-sdk = "=2.1.6"
solana-client = "2.1"
solana-sdk = "2.1.6"
anyhow = "1.0.53"
clap = { version = "4.1.8", features = ["derive"] }
