[package]
name = "amm-cli"
version = "0.1.0"
edition = "2021"

[features]
devnet = ["raydium_amm/devnet"]

[dependencies]
anchor-client = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a" }
serum_dex = { git = "https://github.com/peblair/openbook-dex", default-features = false, features = [
    "client",
    "no-entrypoint",
], branch = "solana-2.0" }
raydium_amm = { git = "https://github.com/peblair/raydium-amm", default-features = false, features = [
    "client",
    "no-entrypoint",
], branch = "solana-2.0" }
common = { path = "../common" }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
solana-client = "2.1.6"
solana-sdk = "2.1.6"
anyhow = "1.0.94"
safe-transmute = "0.11.3"
arrayref = "0.3.9"
clap = { version = "4.5.23", features = ["derive"] }
toml = "0.8.19"
hex = "0.4.3"
bs58 = { version = "0.5.1" }

[lib]
crate-type = ["cdylib", "lib"]
