[package]
name = "common"
version = "0.2.0"
edition = "2021"

[features]
devnet = []

[dependencies]
anchor-client = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a", features = ["memo", "metadata"] }
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
solana-client = "2.1.6"
solana-sdk = "2.1.6"
solana-account-decoder = "2.1.6"
solana-transaction-status = "2.1.6"
anyhow = "1.0.94"
serde_json = { version = "1.0.133" }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
bs58 = { version = "0.5.1" }
bincode = { version = "1.3.3" }
clap = { version = "4.5.23", features = ["derive"] }
toml = "0.8.19"

[lib]
crate-type = ["cdylib", "lib"]
