[package]
name = "cpswap-cli"
version = "0.1.0"
edition = "2021"

[features]
devnet = ["raydium-cp-swap/devnet"]

[dependencies]
anchor-client = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a", features = ["memo", "metadata"] }
raydium-cp-swap = { git = "https://github.com/peblair/raydium-cp-swap", features = [
    "client",
    "no-entrypoint",
], branch = "solana-2.0" }
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
common = { path = "../common" }
spl-memo = "6.0.0"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
solana-client = "2.1.6"
solana-sdk = "2.1.6"
solana-account-decoder = "2.1.6"
solana-transaction-status = "2.1.6"
anyhow = "1.0.94"
rand = "0.8.5"
bytemuck = { version = "1.20.0" }
serde_json = { version = "1.0.133" }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
bs58 = { version = "0.5.1" }
bincode = { version = "1.3.3" }
arrayref = "0.3.9"
clap = { version = "4.5.23", features = ["derive"] }
toml = "0.8.19"
colorful = "0.2.2"
hex = "0.4.3"

[lib]
crate-type = ["cdylib", "lib"]
